--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react": "latest",
     "react-dom": "latest",
     "react-icons": "^4.11.0",
+    "react-images": "^1.2.0-beta.7",
+    "react-photo-gallery": "^8.0.0",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "swiper": "^10.3.1"
